# myfirstrepo

./: .gitignore  1_空间解析几何.txt  2_微分学.txt  AGENTS.md  README.md  _vtest2.py  analysis_output.txt  fetch_all_design.py  fetch_comprehensive.py  fetch_design_skills.py  fetch_skillhub.py  fetch_ui_skills.py  fetch_ui_specific.py  math_tutor.py  read_pdf.py
01_标准检查工具/: config.py  gui_app.py  gui_app_pyside6.py  install_deps.bat  install_deps.py  main.py  models.py  ocr_engine.py  proofread_window.py  proofread_window_pyside6.py  pyproject.toml  report_generator.py  run_gui.py  standard_parser.py  start.bat  utils.py  web_scraper.py
01_标准检查工具/output/: README.txt  log.txt  standard_check_report_20260618_165208.txt  standard_check_report_20260618_165259.txt  standard_check_report_20260618_165603.txt  standard_check_report_20260618_165844.txt  standard_check_report_20260618_165901.txt  standard_check_report_20260621_121024.txt  standard_check_report_20260621_153043.txt  standard_check_report_20260622_105921.txt  standards_cache.json
01_标准检查工具/screenshots/: README.txt
01_标准检查工具/tests/: conftest.py  test_models.py  test_parser.py
02_负荷计算系统/: build.bat  (+5 more)
07 EXCEL-AUTOCAD/: block_editor_gui.py  build_all_libs.bat  build_xlnt.bat  build_xlnt.ps1  build_yaml_cpp.bat  build_yaml_cpp.ps1  config.yaml  gui.py  main.py  pyproject.toml  requirements.txt  run_block_editor.py
07 EXCEL-AUTOCAD/blocks/: TITLE_BLOCK.bak  TITLE_BLOCK.dwg  block_library.bak  block_library.dwg
07 EXCEL-AUTOCAD/output/: report.html  saved7fdc373.tmp  配电系统图.bak  配电系统图.dwg
07 EXCEL-AUTOCAD/outputs/: PDSG_NET_重构方案.html  PDSG_ObjectARX_重构方案.html  PDSG_ObjectARX_重构方案.md  V2G_供电部门协议汇总.md
(+321 files in other folders)
