[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "standard-check-tool"
version = "0.1.0"
description = "工程建设标准有效性检查工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "paddleocr",
    "PySide6",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "basedpyright",
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "SIM", "T10", "RUF"]
ignore = ["E501", "S301", "S311", "B904", "UP007", "UP006"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
