[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pdsg"
version = "1.0.0"
description = "PDSG - 配电柜系统图自动生成程序"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PDSG Team"}]

dependencies = [
    "openpyxl>=3.1.0",
    "pandas>=1.5.0",
    "pyautocad>=0.6.0",
    "comtypes>=1.2.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
pdsg = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
